# cohors

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  add_navidrome_flow_test.sh  add_navidrome_test_script.sh  cliff.toml  dist-workspace.toml  example.stations.config.json  justfile  release-please-config.json
.cargo/: config.toml
.githooks/: README.md  pre-commit
.github/workflows/: release-please.yml  release.yml  rust.yml
packaging/arch/: .gitignore  PKGBUILD
packaging/arch/cohors/: build.sh
scripts/: coverage.sh
src/: app.rs  audio.rs  audiobookshelf.rs  config.rs  favorites.rs  main.rs  mpris.rs  navidrome.rs  radio.rs  subsonic.rs  test_utils.rs  tests.rs  ui.rs
src/app/: tests.rs  tests_delete.rs  tests_edit.rs  tests_mpris_logic.rs
src/audio/: tests.rs
src/audiobookshelf/: tests.rs
src/favorites/: tests.rs
src/mpris/: tests.rs
src/navidrome/: tests.rs
src/radio/: tests.rs  tests_export.rs
src/subsonic/: tests.rs
src/ui/: tests.rs
