[package]
name = "cohors"
version = "0.2.0"
edition = "2024"

[dependencies]
ratatui = "0.29.0"
crossterm = "0.28.1"
rodio = "0.19.0"
tokio = { version = "1.41.1", features = ["full"] }
anyhow = "1.0.93"
spectrum-analyzer = "1.5.0"
reqwest = { version = "0.12.24", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[dev-dependencies]
hound = "3.5.1"
tempfile = "3.23.0"
